# sysexit

./: README.md  pyproject.toml
src/sysexit.egg-info/: SOURCES.txt
sysexit.egg-info/: PKG-INFO  SOURCES.txt
sysexit/sysexit.egg-info/: PKG-INFO
