[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sysexit"
version = "0.1.1"
authors = [
  { name="Wendelin Wemhöner", email="wendelin.wemhoener@gmail.com" },
]
description = "Immediately stops execution when imported by raising a SystemExit exception"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
